app1/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    route.openshift.io/destination-ca-certificate-secret: backend-ca-cert
    route.openshift.io/termination: edge
  labels:
    app.kubernetes.io/instance: prod-backend-app1
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: demo
    app.kubernetes.io/part-of: demo
    app.openshift.io/runtime: dotnet
  name: prod-backend-app1
  namespace: prod
spec:
  rules:
    - host: app1-backend-demo-prod.cluster-2mbd4.dynamic.redhatworkshops.io
      http:
        paths:
          - backend:
              service:
                name: prod-backend-app1
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - {}
